--- a/8/style.css
+++ b/8/style.css
@@ -28,7 +28,7 @@ header .navbar{
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 .navbar .menu-links{
@@ -38,7 +38,12 @@ header .navbar{
 }
 .navbar .menu-links a{
     color: #fff;
+    transition: 0.2s ease;
 }
+.navbar .menu-links a:hover{
+    color: #19a463;
+}
+
 .navbar .menu-links .language-item a {
     display: flex;
     align-items: center;
@@ -46,4 +51,95 @@ header .navbar{
 }
 .navbar .menu-links .language-item span{
     font-size: 1.3rem;
+}
+
+.navbar .menu-links .join-btn a{
+    border: 1px solid #fff;
+    border-radius: 4px;
+    padding: 8px 15px;
+}
+
+.navbar .menu-links .join-btn a:hover{
+    color: #fff;
+    background: #19a463;
+    border-color: transparent;
+}
+
+.hero-section{
+    height: 100vh;
+    background: url(hero-img.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.hero-section .content{
+    max-width: 1400px;
+    margin: 0 auto 40px;
+    width: 100%;
+}
+.hero-section .content h1{
+    color: #fff;
+    font-size: 3rem;
+    max-width: 630px;
+}
+.hero-section .content .search-form{
+    display: flex;
+    height: 48px;
+    max-width: 630px;
+    margin-top: 30px;
+}
+.hero-section .content .search-form input{
+    width: 100%;
+    height: 100%;
+    outline: none;
+    border: none;
+    background-color: #fff;
+    font-size: 1rem;
+    border-radius: 4px 0 0 4px;
+    padding: 0 15px;
+}
+.hero-section .content .search-form  button{
+    height: 100%;
+    width: 60px;
+    outline: none;
+    border: none;
+    color: #fff;
+    border-radius: 0 4px 4px 0;
+    background: #1dbf73;
+    cursor: pointer;
+    transition: background 0.2s ease;
+}
+.hero-section .content .search-form  button:hover{
+    background: #19a463;
+}
+
+.hero-section .popular-tags{
+    display: flex;
+    color: #fff;
+    gap: 24px;
+    font-size: 0.9rem;
+    margin-top: 25px;
+    font-weight: 500;
+    align-items: center;
+}
+.hero-section .popular-tags .tags{
+    display: flex;
+    gap: 15px;
+
+}
+.hero-section .popular-tags .tags li a{
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    padding: 4px 12px;
+    transition: 0.2s ease;
+
+}
+.hero-section .popular-tags .tags li a:hover{
+    background-color: #fff;
+    color: #1d1d1d;
 }
